# rq565-converter

./: Cargo.toml  README.md  generate.sh  test.rq565
assets/: image.ppm
src/: lib.rs  main.rs
src/cli/: mod.rs
src/converter/: decode.rs  encode.rs
src/render/: renderer.rs
src/utils/: constants.rs  errors.rs  file.rs  mod.rs
