[package]
name = "rq565-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
miette = { version = "5.5.0", features = ["fancy"] }
image = "0.24.5"
thiserror = "1.0.38"
